crates/kiln-build/tests/fixtures/captured/syntax_error.verilator.txt
%Error: syntax_err.sv:2:5: syntax error, unexpected input, expecting ';'
    2 |     input logic clk
      |     ^~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=5.048 for more assistance.
%Error: Exiting due to 1 error(s)
